--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    android:id="@+id/drawer_layout_main"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        tools:context=".activities.MainActivity"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context=".activities.MainActivity">
 
 
         <com.google.android.material.appbar.AppBarLayout
@@ -21,6 +19,7 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.Toolbar
+
                 android:id="@+id/toolbar_main"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,22 +29,22 @@
 
 
         <androidx.fragment.app.FragmentContainerView
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             android:id="@+id/fragments_place"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="58dp"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
             tools:layout="@layout/fragment_explore">
 
         </androidx.fragment.app.FragmentContainerView>
 
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            app:menu="@menu/bottom_navigation"
             android:id="@+id/bottom_navigation_main"
-            android:layout_gravity="bottom"
             android:layout_width="match_parent"
-            android:layout_height="58dp">
+            android:layout_height="58dp"
+            android:layout_gravity="bottom"
+            app:menu="@menu/bottom_navigation">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
@@ -53,13 +52,11 @@
 
 
     <com.google.android.material.navigation.NavigationView
-
+        android:id="@+id/navigation_view_main"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/navigation_view_main"
         android:layout_gravity="start"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/drawer_menu"
-        />
+        app:menu="@menu/drawer_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
