--- a/app/src/main/res/layout/explore_item.xml
+++ b/app/src/main/res/layout/explore_item.xml
@@ -6,49 +6,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginEnd="16dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="8dp"
     android:clickable="true"
     android:focusable="true"
-    android:padding="16dp"
-    app:cardCornerRadius="16dp"
-    app:cardElevation="10dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
     tools:ignore="HardcodedText">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
         android:orientation="vertical">
 
 
         <ImageView
             android:id="@+id/explore_item_img"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_gravity="top"
-            android:src="@drawable/img_test" />
+            android:maxHeight="120dp"
+            android:layout_height="120dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/img_test"
+            android:contentDescription="null" />
 
 
         <TextView
             android:id="@+id/explore_item_title"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="16dp"
+            android:layout_gravity="start"
+            android:layout_marginTop="8dp"
             android:text="Title"
+            android:padding="8dp"
+            android:textColor="?colorOnBackground"
             android:textSize="28sp"
             android:textStyle="bold" />
 
         <TextView
+            android:padding="8dp"
             android:id="@+id/explore_item_subTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_gravity="start"
             android:maxLines="4"
             android:text="subTitle"
             android:textSize="18sp" />
