--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:orientation="vertical"
     android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginStart="16dp"
+        android:src="@drawable/wiki"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:contentDescription="null"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:text="@string/app_name"
@@ -11,7 +22,6 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="80dp"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="32dp"
         android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
