--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,78 +9,130 @@
     tools:ignore="HardcodedText">
 
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="top|center"
         android:layout_marginTop="50dp"
-        android:src="@drawable/ic_profile" />
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/lottie_profile" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+
+
+    <LinearLayout
         android:layout_gravity="center"
-        android:layout_marginTop="16dp"
-        android:text="Account Name"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:paddingBottom="8dp"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Mr."
+            android:textColor="?colorOnBackground"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Alireza"
+            android:textColor="?colorOnBackground"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
 
 
-    <TableLayout
+
+
+    <FrameLayout
+        android:layout_marginTop="85dp"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="170dp">
+        android:layout_height="wrap_content">
 
-
-
-        <Button
-            android:textSize="20sp"
-            android:text="My Articles"
-            android:textAllCaps="false"
-            android:background="@drawable/profile_buttons"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+        <TextView
+            android:textColor="?colorOnSurfaceInverse"
+            android:textSize="16sp"
+            android:text="Privacy Policy"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:layout_gravity="start"
+            />
 
-        <Button
-            android:layout_marginTop="16dp"
-            android:textSize="20sp"
-            android:text="Saved Articles"
-            android:textAllCaps="false"
-            android:background="@drawable/profile_buttons"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+        <ImageView
+            android:layout_gravity="end"
+            android:src="@drawable/arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+
+    </FrameLayout>
+    <FrameLayout
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textColor="?colorOnSurfaceInverse"
+            android:textSize="16sp"
+            android:text="Terms of Service"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:layout_gravity="start"
+            />
 
-        <Button
-            android:layout_marginTop="16dp"
-            android:textSize="20sp"
-            android:text="Friends"
-            android:textAllCaps="false"
-            android:background="@drawable/profile_buttons"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+        <ImageView
+            android:layout_gravity="end"
+            android:src="@drawable/arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+
+
+    </FrameLayout>
+    <FrameLayout
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="16dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textColor="?colorOnSurfaceInverse"
+            android:textSize="16sp"
+            android:text="Copyright"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+            android:layout_gravity="start"
+            />
 
-        <Button
-            android:layout_marginTop="16dp"
-            android:textSize="20sp"
-            android:text="Rate This App!"
-            android:textAllCaps="false"
-            android:background="@drawable/profile_buttons"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"/>
+        <ImageView
+            android:layout_gravity="end"
+            android:src="@drawable/arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
 
+    </FrameLayout>
 
-    </TableLayout>
+
+
+
+
+
+
+
 
 
 </LinearLayout>
